[package]
name = "rusttube_gui"
version = "0.1.0"
edition = "2024"
build = "build.rs"
authors = ["Jonas Grimm"]
description = "Simple Windows GUI for yt-dlp downloads"
readme = "README.md"
license = "MIT"
repository = "https://github.com/beqare/RustTube"
homepage = "https://jonasgrimm.de"
documentation = "https://github.com/example/rusttube"
keywords = ["yt-dlp", "downloader", "gui", "windows", "rust"]
categories = ["gui", "multimedia"]
rust-version = "1.94"

[[bin]]
name = "RustTube"
path = "src/main.rs"

[dependencies]
directories = "6.0.0"
eframe = { version = "0.33.0", default-features = true }
ico = "0.4.0"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png", "webp"] }
rfd = "0.15.4"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
webbrowser = "1.0.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
] }

[build-dependencies]
ico = "0.4.0"
winresource = "0.1.19"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
